feat: add demo workflow to show passing damask input files directly

--- a/matflow/data/demo_data_manifest/demo_data_manifest.json
+++ b/matflow/data/demo_data_manifest/demo_data_manifest.json
@@ -7,5 +7,14 @@
     },
     "surfalex_tensile_test.csv": {
         "in_zip": "surfalex_tensile_test.zip"
+    },
+    "load.yaml": {
+        "in_zip": "load.zip"
+    },
+    "geom.vti": {
+        "in_zip": "geom.zip"
+    },
+    "material.yaml": {
+        "in_zip": "material.zip"
     }
 }
