feat: improve task schema Sphinx docs

--- a/.gitignore
+++ b/.gitignore
@@ -137,6 +137,7 @@ docs/source/reference/_autosummary/
 # generated via conf.py
 docs/source/reference/_generated
 docs/source/reference/demo_workflow*
+docs/source/reference/ts_*.html
 docs/source/reference/api.rst
 
 demo_workflows/
