feat: add `load_microstructure` task schema using DefDAP

--- a/matflow/data/demo_data_manifest/demo_data_manifest.json
+++ b/matflow/data/demo_data_manifest/demo_data_manifest.json
@@ -16,5 +16,8 @@
     },
     "material.yaml": {
         "in_zip": "material.zip"
+    },
+    "defdap_small_dataset": {
+        "in_zip": "defdap_small_dataset.zip"
     }
 }
