--- a/matflow/data/workflows/RVE_extrusion_EBSD.yaml
+++ b/matflow/data/workflows/RVE_extrusion_EBSD.yaml
@@ -8,3 +8,12 @@ tasks:
         flip_vert: true # optional
         boundary_tol: 8 # optional
         min_grain_size: 30 # optional
+
+  - schema: generate_volume_element_extrusion
+    inputs:
+      depth: 8
+      image_axes: ["y", "x"]
+      homog_label: SX
+      phase_label: Ti
+
+  - schema: visualise_volume_element_VTK
