docs: rename visualise_volume_element -> visualise_VE

--- a/matflow/data/workflows/simulate_yield_surface_2D_brass.yaml
+++ b/matflow/data/workflows/simulate_yield_surface_2D_brass.yaml
@@ -28,7 +28,7 @@ tasks:
       homog_label: SX
       VE_grid_size: [64, 64, 64]
 
-  - schema: visualise_volume_element_VTK
+  - schema: visualise_VE_VTK
 
   - schema: define_load_case
     inputs:
