feat: add damask numerics file and example

--- a/matflow/data/demo_data_manifest/demo_data_manifest.json
+++ b/matflow/data/demo_data_manifest/demo_data_manifest.json
@@ -19,5 +19,8 @@
     },
     "defdap_small_dataset": {
         "in_zip": "defdap_small_dataset.zip"
+    },
+    "numerics_example.yaml": {
+        "in_zip": "numerics_example.zip"
     }
 }
