--- a/matflow/data/workflows/RVE_extrusion_EBSD.yaml
+++ b/matflow/data/workflows/RVE_extrusion_EBSD.yaml
@@ -153,7 +153,7 @@ tasks:
           - field_name: O
             increments:
               - values: [10, 20, 30]
-      numerics:
+      damask_numerics:
         grid:
           itmin: 2
           itmax: 100
