fix: use demo-data in `sample_texture_CRC_file`

--- a/matflow/data/demo_data_manifest/demo_data_manifest.json
+++ b/matflow/data/demo_data_manifest/demo_data_manifest.json
@@ -3,7 +3,10 @@
         "in_zip": "ODF.zip"
     },
     "texture_Al.ctf": {
-        "in_zip": "texture_Al.zip"
+        "in_zip": "texture_Al_CTF.zip"
+    },
+    "texture_Al_CRC": {
+        "in_zip": "texture_Al_CRC.zip"
     },
     "surfalex_tensile_test.csv": {
         "in_zip": "surfalex_tensile_test.zip"
