--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -378,7 +378,6 @@ jobs:
           - 1
           - 100
           - 10000
-          - 1000000
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v4
@@ -430,7 +429,7 @@ jobs:
       - name: zip benchmark results
         run: |
           zip -r ./benchmarks.zip benchmarks
-      - uses: actions/upload-artifact@v4
+      - uses: actions/upload-artifact@v3
         with:             
           name: benchmarks.zip
           path: benchmarks.zip
@@ -495,7 +494,7 @@ jobs:
             **/matflow-${{ needs.bump-version.outputs.new_tag_name }}-win-dir.zip
             **/matflow-${{ needs.bump-version.outputs.new_tag_name }}-macOS-dir.zip
             **/matflow-${{ needs.bump-version.outputs.new_tag_name }}-linux-dir.zip
-            benchmarks.zip
+            **/benchmarks.zip
           prerelease: ${{ github.event.pull_request.base.ref == 'develop' }}
 
       - name: Release info
