fix: add default repeats value to string variable substitution workflow

--- a/matflow/data/workflows/tension_DAMASK_Al_N_repeats.yaml
+++ b/matflow/data/workflows/tension_DAMASK_Al_N_repeats.yaml
@@ -17,7 +17,7 @@ tasks:
       VE_grid_size: [8, 8, 8]
 
   - schema: simulate_VE_loading_damask
-    repeats: <<var:N>>
+    repeats: <<var:N[default=1]>>
     inputs:
       load_case::uniaxial:
         total_time: 100
