--- a/matflow/data/template_components/command_files.yaml
+++ b/matflow/data/template_components/command_files.yaml
@@ -18,7 +18,7 @@
     name: stderr.log
 - label: damask_hdf5_file
   name:
-    name: geom_load.hdf5
+    name: geom_load_material_numerics.hdf5
 - label: damask_viz_files
   name:
     name: ((?:geom_load_inc\d+|static_outputs).vt(i|r))
