--- a/.github/workflows/test_pre_python.yml.in
+++ b/.github/workflows/test_pre_python.yml.in
@@ -18,16 +18,16 @@ jobs:
           - "3.13-dev"
         os:
           - ubuntu-latest
-          - macos-latest
+          - macos-13
           - windows-latest
 
     runs-on: {% raw %}${{ matrix.os }}{% endraw %}
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         with:
           ref: {% raw %}${{ github.ref }}{% endraw %}
 
-      - uses: actions/setup-python@v4
+      - uses: actions/setup-python@v5
         with:
           python-version: {% raw %}${{ matrix.python-version }}{% endraw %}
           allow-prereleases: true
@@ -39,7 +39,7 @@ jobs:
           poetry config installer.modern-installation false
 
       - name: Cache the virtualenv
-        uses: actions/cache@v3
+        uses: actions/cache@v4
         with:
           path: ./.venv
           key: {% raw %}${{ runner.os }}-test-${{ matrix.python-version }}-venv-${{ hashFiles('**/poetry.lock') }}{% endraw %}
