feat: update subset simulation demo workflow, simplify parameters

--- a/matflow/data/workflows/subset_simulation.yaml
+++ b/matflow/data/workflows/subset_simulation.yaml
@@ -4,7 +4,7 @@ template_components:
       inputs:
         - parameter: dimension
       outputs:
-        - parameter: MC_state
+        - parameter: x
       actions:
         - script: <<script:uq/sample_direct_MC.py>>
           script_data_in: direct
@@ -17,12 +17,9 @@ template_components:
 
     - objective: system_analysis
       inputs:
-        - parameter: MC_state
-        - parameter: g
-          default_value: null
+        - parameter: x
       outputs:
         - parameter: g
-        - parameter: MC_state
       actions:
         - script: <<script:uq/system_analysis.py>>
           script_data_in: direct
@@ -37,21 +34,27 @@ template_components:
       inputs:
         - parameter: g
           group: all
-        - parameter: MC_state
+        - parameter: x
           group: all
+        - parameter: all_g
+          group: all
+          default_value: null
+        - parameter: all_x
+          group: all
+          default_value: null
         - parameter: p_0
       outputs:
-        - parameter: seeds
-        - parameter: evals
+        - parameter: chain_seeds
+        - parameter: chain_g
         - parameter: threshold
         - parameter: num_chains
         - parameter: num_failed
+        - parameter: pf
       actions:
         - script: <<script:uq/collate_results.py>>
           script_data_in:
             g: { format: direct, all_iterations: true }
-            MC_state: { format: direct, all_iterations: true }
-            "*": { format: direct }
+            "*": direct
           script_data_out: direct
           script_exe: python_script
           environments:
@@ -62,13 +65,15 @@ template_components:
     - objective: initialise_markov_chains
       inputs:
         - parameter: chain_index
-        - parameter: seeds
-        - parameter: evals
+        - parameter: chain_seeds
+        - parameter: chain_g
       outputs:
-        - parameter: MC_state
+        - parameter: x
         - parameter: g
+        - parameter: all_x
+        - parameter: all_g
       actions:
-        - script: <<script:uq/initialise_chains.py>>
+        - script: <<script:uq/initialise_markov_chains.py>>
           script_data_in: direct
           script_data_out: direct
           script_exe: python_script
@@ -79,13 +84,11 @@ template_components:
 
     - objective: generate_next_state
       inputs:
-        - parameter: MC_state
-        - parameter: g
+        - parameter: x
       outputs:
-        - parameter: MC_state
-        - parameter: g
+        - parameter: x
       actions:
-        - script: <<script:uq/modified_metropolis_generate_candidate.py>>
+        - script: <<script:uq/generate_next_state.py>>
           script_data_in: direct
           script_data_out: direct
           script_exe: python_script
@@ -96,76 +99,54 @@ template_components:
 
     - objective: increment_chain
       inputs:
-        - parameter: MC_state
+        - parameter: x
         - parameter: g
+        - parameter: all_x
+        - parameter: all_g
         - parameter: threshold
-        - parameter: chain_index
       outputs:
-        - parameter: MC_state
+        - parameter: x
         - parameter: g
+        - parameter: all_x
+        - parameter: all_g
       actions:
         - script: <<script:uq/increment_chain.py>>
-          script_data_in:
-            g: { format: direct, all_iterations: true }
-            MC_state: { format: direct, all_iterations: true }
-            "*": { format: direct }
+          script_data_in: direct
           script_data_out: direct
           script_exe: python_script
           environments:
             - scope:
                 type: any
               environment: python_env
-
-    - objective: collate_chains
-      inputs:
-        - parameter: MC_state
-          group: all
-        - parameter: g
-          group: all
-      actions:
-        - script: <<script:uq/collate_chains.py>>
-          script_data_in:
-            g: { format: direct, all_iterations: true }
-            MC_state: { format: direct, all_iterations: true }
-          script_data_out: direct
-          script_exe: python_script
-          environments:
-            - scope:
-                type: any
-              environment: python_env
-
-# variables:
-#   num_states: 1000
-#   p_0: 0.1
 
 loops:
   - name: markov_chain_state # [inner loop]
     tasks: [4, 5, 6]
-    num_iterations: 4 # num_states - 1: (1 / p_0) - 1
+    num_iterations: 9 # num_states - 1: (1 / p_0) - 1
   - name: levels # [outer loop]
     tasks: [2, 3, 4, 5, 6]
-    num_iterations: 2
+    num_iterations: 10
 
 tasks:
-  - schema: sample_direct_MC # inputs: (dimension); outputs; (MC_state)
+  - schema: sample_direct_MC
     inputs:
       dimension: 2
-    repeats: 10 # num_samples
-  - schema: system_analysis # inputs; (MC_state, g); outputs; (MC_state, g)
+    repeats: 100 # num_samples
+  - schema: system_analysis
     groups:
       - name: all
-  - schema: collate_results # [outer loop]; inputs: (g[all], MC_state[all], p_0); outputs: (seeds,evals,threshold,num_chains,num_failed)
+  - schema: collate_results # [outer loop]
     inputs:
-      p_0: 0.2
-  - schema: initialise_markov_chains # [outer loop]; inputs: (chain_idx,seeds,evals); outputs: (MC_state, g)
+      p_0: 0.1
+  - schema: initialise_markov_chains # [outer loop]
     sequences:
       - path: inputs.chain_index
         values::from_range:
           start: 0
-          stop: 2 # num_chains: num_samples * p_0
+          stop: 10 # num_chains: num_samples * p_0
           step: 1
-  - schema: generate_next_state # [inner loop]; inputs: (MC_state array, g array); outputs: (MC_state array, g array)
-  - schema: system_analysis # [inner loop]; inputs: # inputs; (MC_state, g); outputs; (MC_state, g)
-  - schema: increment_chain # [inner loop]; inputs: (MC_state array,g array,threshold); outputs: (MC_state array, g array)
+  - schema: generate_next_state # [inner loop]
+  - schema: system_analysis # [inner loop]
+  - schema: increment_chain # [inner loop]
     groups:
       - name: all
